Chapter 4 fixes done

--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -88,6 +88,23 @@ publisher = {Cambridge University Press},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{blanchet:2014,
+       author = {{Blanchet}, L.},
+        title = "{Gravitational Radiation from Post-Newtonian Sources and Inspiralling Compact Binaries}",
+      journal = {Living Reviews in Relativity},
+     keywords = {Post-Newtonian approximation, Gravitational radiation, Multipolar expansion, Inspiralling compact binary, Post-Newtonian approximations, General Relativity and Quantum Cosmology},
+         year = "2014",
+        month = Feb,
+       volume = {17},
+       number = {1},
+          doi = {10.12942/lrr-2014-2},
+archivePrefix = {arXiv},
+       eprint = {1310.1528},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014LRR....17....2B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{berentzen:2009,
        author = {{Berentzen}, I. and {Preto}, M. and {Berczik}, P. and
          {Merritt}, D. and {Spurzem}, R.},
