Chapter 4 additional fixes

--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -88,6 +88,22 @@ publisher = {Cambridge University Press},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{mannerkoski:2019,
+       author = {{Mannerkoski}, M. and {Johansson}, P.~H. and {Pihajoki}, P. and
+         {Rantala}, A. and {Naab}, T.},
+        title = "{Gravitational Waves from the Inspiral of Supermassive Black Holes in Galactic-scale Simulations}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena},
+         year = "2019",
+        month = Sep,
+          eid = {arXiv:1909.01373},
+archivePrefix = {arXiv},
+       eprint = {1909.01373},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190901373M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{blanchet:2014,
        author = {{Blanchet}, L.},
         title = "{Gravitational Radiation from Post-Newtonian Sources and Inspiralling Compact Binaries}",
