--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -42,6 +42,12 @@ publisher = {Oxford University Press},
 year = {2008},
 }
 
+@book{maxwell,
+title = "{A Treatise on Electricity and Magnetism}",
+author = {{Maxwell}, J.~C.},
+year = {1873},
+}
+
 @book{tame,
 title = "{Johdatus taivaanmekaniikkaan}",
 author = {{Karttunen}, H.},
@@ -85,6 +91,18 @@ publisher = {Cambridge University Press},
       address = {Princeton},
     publisher = {Princeton University Press},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2013degn.book.....M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{young:1804,
+       author = {{Young}, Thomas},
+        title = "{The Bakerian Lecture: Experiments and Calculations Relative to Physical Optics}",
+      journal = {Philosophical Transactions of the Royal Society of London Series I},
+         year = "1804",
+        month = Jan,
+       volume = {94},
+        pages = {1-16},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1804RSPT...94....1Y},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
