Final edits, thesis done

--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -881,7 +881,7 @@ t_c \sim -\frac{a}{4\dot{a}} \ .
 
 The longest evolutionary phase for a black hole binary is when the radius of the bound system is below that at which it becomes hard, but still above the radius at which gravitational waves become prominent \citep{begelman:1980}. This is known as the bottleneck radius, and it marks the area where binary black holes are most likely observed. The decay time at this bottleneck radius is uncertain, and depends on both the population of the loss cone and how much gas affects the evolution of the binary \citep{bt-galdyn}. If the coalescence time is very long, over 10 Gyr, we would expect to be able to observe these binaries at the centers of most galaxies. If the timescale is shorter, we could observe the coalescence events happening.
 
-Current observational evidence suggests that long-lived supermassive black hole binaries might be quite rare. Though there are many implied candidates based on periodic variability, no concrete observations of a supermassive black hole binary have been made. If both of the supermassive black holes of a binary are quasars and they are very close to each other, it is difficult to tell them apart from a singular active galactic nuclei \citep{roedig:2014}. In the future observations made by the LISA gravitational wave detector might give concrete proof of the merging and thus existence of supermassive black hole binaries, and we might be able to even make interferometric direct observations of a binary black hole. LISA, or Laser Interferometer Space Antenna, is a planned project to accurately measure gravitational waves, consisting of three spacecraft arranged in an equilateral triangle flying on an Earth-like heliocentric orbit. The satellites will very accurately measure their relative distances from each other to detect gravitational waves. Being in space will allow it to measure gravitational waves much more accurately than detectors on the ground, since there is less interference and it can be better dealt with.
+Current observational evidence suggests that long-lived supermassive black hole binaries might be quite rare. Though there are many implied candidates based on periodic variability, no concrete observations of a supermassive black hole binary have been made. If both of the supermassive black holes of a binary are quasars and they are very close to each other, it is difficult to tell them apart from a singular active galactic nuclei \citep{roedig:2014}. In the future observations made by the LISA gravitational wave detector might give concrete proof of the merging and thus existence of supermassive black hole binaries, and we might be able to even make interferometric direct observations of a binary black hole. LISA, or Laser Interferometer Space Antenna, is a planned project to accurately measure gravitational waves, consisting of three spacecraft arranged in an equilateral triangle flying on an Earth-like heliocentric orbit. The satellites will very accurately measure their relative distances from each other to detect gravitational waves. Being in space will allow LISA to measure gravitational waves much more accurately than detectors on the ground, since there is less interference and it can be better dealt with.
 
 \chapter{AR-CHAIN} \label{chap:ar-chain}
 %TODO kerronko introssa siitä et miks simulaatiota tehään, modaa sen perusteella mitä tässä sanotaan, kuinka paljon taustaa. 
